ConsultingHub/force-app/main/default/objects/Enablement_Activity__c/Enablement_Activity__c.object-meta.xml
<CustomObject>
    <label>Enablement Activity</label>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enablement Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>