ConsultingHub/force-app/main/default/objects/Enablement_Activity__c/fields/Activity_Group__c.field-meta.xml
<CustomField>
    <fullName>Activity_Group__c</fullName>
    <label>Activity Group</label>
    <referenceTo>Activity_Group__c</referenceTo>
    <relationshipLabel>Enablement Activities</relationshipLabel>
    <relationshipName>Enablement_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>