ConsultingHub/force-app/main/default/objects/Enablement_Activity__c/fields/Hours_Required__c.field-meta.xml
<CustomField>
    <fullName>Hours_Required__c</fullName>
    <label>Hours Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>