ConsultingHub/force-app/main/default/objects/Enablement_Activity__c/fields/Learning__c.field-meta.xml
<CustomField>
    <fullName>Learning__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Learning</label>
    <referenceTo>Learning__c</referenceTo>
    <relationshipLabel>Enablement Activities</relationshipLabel>
    <relationshipName>Enablement_Activities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>